k8s-deployment-setup/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: revving
  name: revving
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: revving
  type: LoadBalancer
status:
  loadBalancer: {}
